hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__diverse_dfg_children@llvm14.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i1 @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call i1 @_hl.scoped_func.8()
  ret i1 %0
}

define i1 @_hl.scoped_func.8() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret i1 false
}
