hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__emit_hugr_call@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.main_void.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @_hl.main_void.1()
  ret void
}

define { i32, {}, {} } @_hl.main_unary.5({ i32, {}, {} } %0) {
alloca_block:
  %"0" = alloca { i32, {}, {} }, align 8
  %"6_0" = alloca { i32, {}, {} }, align 8
  %"8_0" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } %0, { i32, {}, {} }* %"6_0", align 4
  %"6_01" = load { i32, {}, {} }, { i32, {}, {} }* %"6_0", align 4
  %1 = call { i32, {}, {} } @_hl.main_unary.5({ i32, {}, {} } %"6_01")
  store { i32, {}, {} } %1, { i32, {}, {} }* %"8_0", align 4
  %"8_02" = load { i32, {}, {} }, { i32, {}, {} }* %"8_0", align 4
  store { i32, {}, {} } %"8_02", { i32, {}, {} }* %"0", align 4
  %"03" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  ret { i32, {}, {} } %"03"
}

define { { i32, {}, {} }, { i32, {}, {} } } @_hl.main_binary.9({ i32, {}, {} } %0, { i32, {}, {} } %1) {
alloca_block:
  %"0" = alloca { i32, {}, {} }, align 8
  %"1" = alloca { i32, {}, {} }, align 8
  %"10_0" = alloca { i32, {}, {} }, align 8
  %"10_1" = alloca { i32, {}, {} }, align 8
  %"12_0" = alloca { i32, {}, {} }, align 8
  %"12_1" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } %0, { i32, {}, {} }* %"10_0", align 4
  store { i32, {}, {} } %1, { i32, {}, {} }* %"10_1", align 4
  %"10_01" = load { i32, {}, {} }, { i32, {}, {} }* %"10_0", align 4
  %"10_12" = load { i32, {}, {} }, { i32, {}, {} }* %"10_1", align 4
  %2 = call { { i32, {}, {} }, { i32, {}, {} } } @_hl.main_binary.9({ i32, {}, {} } %"10_01", { i32, {}, {} } %"10_12")
  %3 = extractvalue { { i32, {}, {} }, { i32, {}, {} } } %2, 0
  %4 = extractvalue { { i32, {}, {} }, { i32, {}, {} } } %2, 1
  store { i32, {}, {} } %3, { i32, {}, {} }* %"12_0", align 4
  store { i32, {}, {} } %4, { i32, {}, {} }* %"12_1", align 4
  %"12_03" = load { i32, {}, {} }, { i32, {}, {} }* %"12_0", align 4
  %"12_14" = load { i32, {}, {} }, { i32, {}, {} }* %"12_1", align 4
  store { i32, {}, {} } %"12_03", { i32, {}, {} }* %"0", align 4
  store { i32, {}, {} } %"12_14", { i32, {}, {} }* %"1", align 4
  %"05" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  %"16" = load { i32, {}, {} }, { i32, {}, {} }* %"1", align 4
  %mrv = insertvalue { { i32, {}, {} }, { i32, {}, {} } } undef, { i32, {}, {} } %"05", 0
  %mrv7 = insertvalue { { i32, {}, {} }, { i32, {}, {} } } %mrv, { i32, {}, {} } %"16", 1
  ret { { i32, {}, {} }, { i32, {}, {} } } %mrv7
}
